--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/runtime": "^7.20.7",
     "file-loader": "^6.2.0"
   }
 }
